test/errors/scope-resolution/redefinition/redefinition-public-use-as.1.good
redefinition-public-use-as.chpl:9: error: 'a' has multiple definitions in this scope
redefinition-public-use-as.chpl:10: note: it was first defined through the 'use' statement here
redefinition-public-use-as.chpl:2: note: leading to the definition here
redefinition-public-use-as.chpl:11: note: redefined through the 'use' statement here
redefinition-public-use-as.chpl:6: note: leading to the definition here
